<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.prasan.weather.ui.fragment.MainFragment">
    <!-- Alternatively, co-ordinator layout can be used to hide the floating button during scrolling the forecast list -->
    <!-- Additionally, would have used constrained layout if time permitted, for a more flatter view hierarchy -->
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:id="@+id/city_weather_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <!-- BEGIN: Display today's weather -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:text="@string/current_weather_banner"/>

                <!-- Alternatively the new Android Data Binding library can be used with the Weather POJO object -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/background_light"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/weather_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:contentDescription="@string/weather_icon"
                        tools:src="@mipmap/ic_launcher" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@id/weather_icon"
                        android:layout_marginEnd="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/weather_icon"
                        android:layout_toRightOf="@id/weather_icon"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/city_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:text="Atlanta" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/current_temp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                tools:text="Temp(F): 65" />

                            <TextView
                                android:id="@+id/weather_desc"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                tools:text="Rain" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/min_temp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                tools:text="Min: 48F" />

                            <TextView
                                android:id="@+id/max_temp"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                tools:text="Max: 78F" />

                            <TextView
                                android:id="@+id/humidity"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                tools:text="Humidity: 98%" />

                        </LinearLayout>

                    </LinearLayout>


                </RelativeLayout>
                <!-- END: Display today's weather -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/darker_gray"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:text="@string/forecase_banner"/>
                <!-- 5 day forecast -->
                <android.support.v7.widget.RecyclerView
                     android:id="@+id/ten_day_weather"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scrollbars="vertical"
                     android:clipToPadding="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/empty_city_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/empty_city" />

            <LinearLayout
                android:id="@+id/city_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:id="@+id/city_editext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/city_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
                    android:inputType="textCapWords|text"/>


                <Button
                    android:id="@+id/city_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/btn_submit" />


            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/enter_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                android:src="@drawable/ic_room_white_48dp"
                app:elevation="4dp" />
        </FrameLayout>

    </android.support.v4.widget.SwipeRefreshLayout>

</FrameLayout>
